--- a/app/views/admin/theft_alerts/edit.html.haml
+++ b/app/views/admin/theft_alerts/edit.html.haml
@@ -1,7 +1,10 @@
 = render partial: "/admin/bikes/bike", locals: { bike: @bike, target: "show", stolen_record: @stolen_record }
 
 %h2.mt-4
-  = link_to "Payment", edit_admin_payment_path(@theft_alert.payment_id)
+  Payment
+  %small
+    - if @theft_alert.payment.present?
+      = link_to "view payment", edit_admin_payment_path(@theft_alert.payment_id)
 
 - if @theft_alert.payment.present?
   = render partial: "/admin/payments/display_table", locals: { payment: @theft_alert.payment }
