--- a/app/javascript/packs/application_css.scss
+++ b/app/javascript/packs/application_css.scss
@@ -22,6 +22,7 @@
 
 // Specific section styles
 @import "../stylesheets/admin";
+@import "../stylesheets/period_selection";
 
 // For now, because we don't want to replicate all the styles immediately, we're hiding the footer
 footer.primary-footer {
@@ -29,9 +30,9 @@ footer.primary-footer {
 }
 
 // Uppy Styles
-@import '@uppy/core/dist/style.css';
-@import '@uppy/dashboard/dist/style.css';
-@import '@uppy/progress-bar/dist/style.css';
+@import "@uppy/core/dist/style.css";
+@import "@uppy/dashboard/dist/style.css";
+@import "@uppy/progress-bar/dist/style.css";
 // Hide uppy file upload button because it's not needed
 .uppy {
   .uppy-FileInput-btn {
