rename kind to payment method on payments

--- a/app/views/admin/organizations/invoices/_table.html.haml
+++ b/app/views/admin/organizations/invoices/_table.html.haml
@@ -76,7 +76,7 @@
               %ul
                 - invoice.payments.each do |payment|
                   %li{ style: "font-size: 80%;" }
-                    #{link_to "#{payment.amount_formatted} #{payment.kind}", admin_payment_path(payment)},
+                    #{link_to "#{payment.amount_formatted} #{payment.payment_method}", admin_payment_path(payment)},
                     %span.convertTime
                       = l payment.created_at, format: :convert_time
           %td
