--- a/app/views/admin/payments/new.html.haml
+++ b/app/views/admin/payments/new.html.haml
@@ -8,8 +8,8 @@
   .row
     .col-md-6
       .form-group.fancy-select.unfancy
-        = f.label :kind
-        = f.select :kind, Payment.admin_creatable_kinds.map { |k| [k.humanize, k] }
+        = f.label :payment_method
+        = f.select :payment_method, Payment.admin_creatable_payment_methods.map { |m| [m.humanize, m] }
     .col-md-6
       .form-group
         - f.object.created_at = TimeParser.round(f.object.created_at || Time.current)
