--- a/app/views/customer_mailer/invoice_email.text.haml
+++ b/app/views/customer_mailer/invoice_email.text.haml
@@ -1,6 +1,6 @@
 = t(".text.thanks_for_signing_up")
 
-- if @payment.is_donation
+- if @payment.donation?
   = t(".text.donation_will_help", amount: @payment.amount_formatted)
 - else
   = t(".text.payment_received", amount: @payment.amount_formatted)
