--- a/app/views/admin/payments/index.html.haml
+++ b/app/views/admin/payments/index.html.haml
@@ -1,3 +1,14 @@
+  :ruby
+    payments_counts = Payment.kinds.map do |kind|
+      payments_of_kind = matching_payments.where(kind: kind)
+      {
+        name: kind,
+        data: time_range_counts(collection: payments_of_kind),
+        count: payments_of_kind.count,
+        sum: Payment.money_formatted(payments_of_kind.sum(:amount_cents)),
+      }
+    end
+
 .admin-subnav
   .col-md-5
     %h1
@@ -10,17 +21,6 @@
         = link_to "graph", admin_payments_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
 
 - if @render_chart
-  :ruby
-    payments_counts = Payment.kinds.map do |kind|
-      payments_of_kind = matching_payments.where(kind: kind)
-      {
-        name: kind,
-        data: time_range_counts(collection: payments_of_kind),
-        count: payments_of_kind.count,
-        sum: Payment.money_formatted(payments_of_kind.sum(:amount_cents)),
-      }
-    end
-
   .col-12.mt-2
     = column_chart payments_counts, stacked: true, thousands: ",", defer: true
 
@@ -38,11 +38,12 @@
         %thead
           - payments_counts.each do |payment_count|
             %th
-              = payment_count.name
+              = payment_count[:name]
         %tbody
           %tr
-            - theft_alert_plans.each do |theft_alert_plan|
+            - payments_counts.each do |payment_count|
               %td
+                #{payment_count
                 = matching_payments.where(theft_alert_plan: theft_alert_plan).count
 = paginate @payments, views_prefix: "admin"
 
