--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -162,7 +162,7 @@
         %td
           = payment.amount
         %td
-          = check_mark if payment.is_payment
+          = payment.display_kind
 
 .row
   .col-md-6
