--- a/app/views/admin/payments/index.html.haml
+++ b/app/views/admin/payments/index.html.haml
@@ -12,17 +12,15 @@
 :ruby
   payments_counts = Payment.kinds.map do |kind|
     # Legacy enum issue so excited for TODO: Rails 5 update
-    payment_enum = Payment::KIND_ENUM[kind.to_sym] || 0
-    payments_of_kind = matching_payments.where(kind: )
+    payment_enum = Payment::KIND_ENUM[kind.to_sym]
+    payments_of_kind = matching_payments.where(kind: payment_enum)
     {
-      name: kind,
-      # data: time_range_counts(collection: payments_of_kind),
+      name: Payment.display_kind(kind),
+      data: time_range_counts(collection: payments_of_kind),
       count: payments_of_kind.count,
       money: Payment.money_formatted(payments_of_kind.sum(:amount_cents)),
     }
   end
-
-= pretty_print_json(payments_counts.as_json)
 
 - if @render_chart
   .col-12.mt-2
@@ -33,10 +31,10 @@
     = render partial: "/shared/period_select"
 
 .row.mb-4
-  .col
-    %h4
+  .col-sm
+    %h4.mt-2
       = pluralize(@payments.total_count, "matching payment")
-  .col
+  .col-sm
     .full-screen-table
       %table.table.table-striped.table-bordered.table-sm.text-center
         %thead
@@ -47,7 +45,8 @@
           %tr
             - payments_counts.each do |payment_count|
               %td
-                #{payment_count[:count]} - #{payment_count[:money]}
+                #{number_with_delimiter(payment_count[:count])} - #{payment_count[:money]}
+
 = paginate @payments, views_prefix: "admin"
 
 
