--- a/app/views/shared/_period_select.html.haml
+++ b/app/views/shared/_period_select.html.haml
@@ -1,13 +1,30 @@
-#timeSelectionBtnGroup.col-md.col-12.text-right{ role: "group" }
-  %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "hour"), data: { period: "hour" } }
-    = t(".past_hour")
-  %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "day"), data: { period: "day" } }
-    = t(".past_day")
-  %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "week"), data: { period: "week" } }
-    = t(".past_7_days")
-  %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "month"), data: { period: "month" } }
-    = t(".past_30_days")
-  %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "year"), data: { period: "year" } }
-    = t(".past_year")
-  %button.btn.btn-outline-secondary.btn-sm{ class: ("active" if @period == "all"), data: { period: "all" } }
+#timeSelectionBtnGroup.text-right{ role: "group", class: @period == "custom" ? "custom-period-selected" : "" }
+  %button.btn.btn-outline-secondary.btn-sm.period-select-standard{ class: ("active" if @period == "hour"), data: { period: "hour" } }
+    %span.d-none.d-md-inline-block= t(".past")
+    = t(".hour")
+  %button.btn.btn-outline-secondary.btn-sm.period-select-standard{ class: ("active" if @period == "day"), data: { period: "day" } }
+    %span.d-none.d-md-inline-block= t(".past")
+    = t(".day")
+  %button.btn.btn-outline-secondary.btn-sm.period-select-standard{ class: ("active" if @period == "week"), data: { period: "week" } }
+    %span.d-none.d-md-inline-block= t(".past")
+    = t(".seven_days")
+  %button.btn.btn-outline-secondary.btn-sm.period-select-standard{ class: ("active" if @period == "month"), data: { period: "month" } }
+    %span.d-none.d-md-inline-block= t(".past")
+    = t(".thirty_days")
+  %button.btn.btn-outline-secondary.btn-sm.period-select-standard{ class: ("active" if @period == "year"), data: { period: "year" } }
+    %span.d-none.d-md-inline-block= t(".past")
+    = t(".year")
+  %button.btn.btn-outline-secondary.btn-sm.period-select-standard{ class: ("active" if @period == "all"), data: { period: "all" } }
     = t(".all")
+  %button#periodSelectCustom.btn.btn-outline-secondary.btn-sm.ml-2{ class: ("active" if @period == "custom"), data: { period: "custom" } }
+    = t(".custom")
+
+%form#timeSelectionCustom.custom-time-selection.mt-2.collapse{ class: @period == "custom" ? "in show" : "" }
+  .form-group
+    = label_tag :start_time_selector, t(".from"), class: "control-label mr-2"
+    = datetime_local_field_tag :start_time_selector, @start_time.strftime("%Y-%m-%dT%H:%M"), step: 60, class: "form-control"
+  .form-group.ml-4
+    = label_tag :end_time_selector, t(".to"), class: "control-label mr-2"
+    = datetime_local_field_tag :end_time_selector, @end_time.strftime("%Y-%m-%dT%H:%M"), step: 60, class: "form-control"
+  %button#updatePeriodSelectCustom.btn.btn-success.btn-sm.ml-2
+    = t(".update")
