remove giving tuesday popup, add to search and user home

--- a/app/views/bikes/index.html.haml
+++ b/app/views/bikes/index.html.haml
@@ -73,3 +73,5 @@
   window.bike_placeholder_image = "#{bike_placeholder_image_path}";
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+= render "/shared/donation_modal"
