--- a/app/views/welcome/user_home.html.haml
+++ b/app/views/welcome/user_home.html.haml
@@ -123,3 +123,5 @@
                   = t(".want_to_sell_your_bikes")
                   = link_to t(".list_a_bike_on_bikefair"), "https://bikefair.org/auth/bikeindex"
       .ad-block#right300x600
+
+= render "/shared/donation_modal"
