--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -157,7 +157,7 @@
 
     -# grab (and remove) the donation modal if it's there
     - donation_request = session.delete(:render_donation_request)
-    = render "/shared/donate_modal", locals: { kind: donation_request } if donation_request.present?
+    = render "/shared/law_enforcement_donation_modal", locals: { kind: donation_request } if donation_request.present?
 
     = render 'shared/footer_revised'
 
