--- a/app/views/admin/theft_alerts/index.html.haml
+++ b/app/views/admin/theft_alerts/index.html.haml
@@ -5,16 +5,17 @@
     %ul
       %li.nav-item
         = link_to "graph", admin_theft_alerts_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
-- if @render_chart
-  :ruby
-    theft_alert_plans = TheftAlertPlan.price_ordered_desc.select { |plan| matching_theft_alerts.where(theft_alert_plan: plan).any? }
-    theft_alerts_graph = theft_alert_plans.map do |theft_alert_plan|
-      {
-        name: theft_alert_plan.name,
-        data: time_range_counts(collection: matching_theft_alerts.where(theft_alert_plan: theft_alert_plan))
-      }
-    end
 
+:ruby
+  theft_alert_plans = TheftAlertPlan.price_ordered_desc.select { |plan| matching_theft_alerts.where(theft_alert_plan: plan).any? }
+  theft_alerts_graph = theft_alert_plans.map do |theft_alert_plan|
+    {
+      name: theft_alert_plan.name,
+      data: time_range_counts(collection: matching_theft_alerts.where(theft_alert_plan_id: theft_alert_plan.id))
+    }
+  end
+
+- if @render_chart
   .col-12.mt-2
     = column_chart theft_alerts_graph, stacked: true, thousands: ",", defer: true
 
