--- a/app/views/admin/organizations/_form.html.haml
+++ b/app/views/admin/organizations/_form.html.haml
@@ -15,8 +15,8 @@
 .row
   .col-md-6
     .form-group
-      = f.label :short_name, "Short name (15 letters or less)"
-      = f.text_field :short_name, required: true, class: "form-control"
+      = f.label :short_name, "Short name (30 letters or less)"
+      = f.text_field :short_name, class: "form-control"
   .col-md-6
     .form-group
       = f.label :ascend_name
