--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -157,7 +157,11 @@
 
     -# grab (and remove) the donation modal if it's there
     - donation_request = session.delete(:render_donation_request)
-    = render "/shared/law_enforcement_donation_modal", locals: { kind: donation_request } if donation_request.present?
+    - if donation_request.present?
+      = render "/shared/law_enforcement_donation_modal", locals: { kind: donation_request }
+    - elsif show_missing_location_alert
+      -# TO BE IMPLEMENTED
+      -#= render "/shared/stolen_missing_location_modal"
 
     = render 'shared/footer_revised'
 
