--- a/app/views/organized/dashboard/index.html.haml
+++ b/app/views/organized/dashboard/index.html.haml
@@ -4,7 +4,7 @@
     Dashboard
 
 - if current_organization.regional?
-  = column_chart organization_dashboard_bikes_graph_data(@time_range), stacked: true, thousands: ",", defer: true, colors: ["#5cb85c", "#3498db"]
+  = column_chart organization_dashboard_bikes_graph_data, stacked: true, thousands: ",", defer: true, colors: ["#5cb85c", "#3498db"]
 
   %div{ style: "margin-top: 50px;" }
     = render partial: "/shared/period_select"
