--- a/app/views/admin/organizations/_location_fields.html.haml
+++ b/app/views/admin/organizations/_location_fields.html.haml
@@ -20,14 +20,14 @@
               = f.text_field :city, placeholder: "City", class: "form-control mt-1"
         .row
           .col-lg-6
-            .form-group.fancy-select.unfancy
+            .form-group.fancy-select.unfancy.no-restore-on-backspace
               = f.collection_select(:state_id, State.all, :id, :name, {prompt: "State", include_blank: true}, class: "form-control mt-1" )
           .col-lg-6
             .form-group
               = f.text_field :zipcode, placeholder: "Zipcode", class: "form-control mt-1"
         .row
           .col-lg-6
-            .form-group.fancy-select.unfancy
+            .form-group.fancy-select.unfancy.no-restore-on-backspace
               = f.select(:country_id, Country.select_options, class: "form-control mt-1" )
           .col-lg-6
             .form-group.text-center
